--- a/public/javascripts/angular/views/hello.html
+++ b/public/javascripts/angular/views/hello.html
@@ -1,7 +1,7 @@
-<h1 class=".cover-heading"> Cover your page.</h1>
+<h1 class=".cover-heading"> File to base^64.</h1>
 <p class="lead">
-   Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.
+   A simple app that converts file(,blob) to base64
 </p>
 <p class="lead">
-  <a class="btn btn-lg btn-default btn-material-deep-purple"  href='#' > Learn more </a>
+  <a class="btn btn-lg btn-default btn-material-deep-purple"  ng-href='#upload' > Start now </a>
 </p>
