--- a/public/javascripts/angular/views/upload.html
+++ b/public/javascripts/angular/views/upload.html
@@ -1,10 +1,13 @@
-<div ng-app="uploaderWrapper" ng-controller="uploadCtrl">
-    <upload-zone class="dropzone" file-dropzone="[image/png, image/jpeg, image/gif]"
-                  file="image" file-name="imageFileName" data-max-file-size="3">
-      <span>Drop Image Here</span>
-    </upload-zone>
-    <div class="image-container">
-      <img ng-src={{image}} />
-      <span class="file-name">{{imageFileName}}</span>
-    </div>
+<div ng-controller="UploadCtrl">
+  <div file-dropzone="[image/png, image/jpeg, image/gif]" 
+  		file="image" file-name="imageFileName" data-max-file-size="3" 
+  		class="dropzone">
+  		<span>Drop Image Here</span> 
+   </div>
+ 
+  <div class="image-container">
+  	 <img ng-src="{{image}}"/>      
+  	 <span class="file-name">	{{imageFileName}} </span>
+  	 <a ng-href="#base64"> base64 </a>
+  </div>
 </div>
