now handle multiple files

--- a/public/javascripts/angular/views/base64.html
+++ b/public/javascripts/angular/views/base64.html
@@ -1,3 +1,11 @@
-<div style="height:30%">
-{{ encodedString }}
-</div>
+  <h1> Encoded files </h1>
+
+  <table>
+    <tr  ng-repeat="curFile in storedFiles">
+  	  <td style="font:12px;">  {{ curFile.name}}  </td>
+      <td class="image-container"> <img ng-src="{{curFile.image}}" /> </td>
+      <td> <div style="width:400px; height:30px; overflow:auto;"> {{curFile.base64}} </div></td>
+    </tr>
+  </table>
+
+  <button ng-show="storedFiles.length > 0" ng-click="clearFiles()" > Clear Files </button>
