--- a/public/stylesheets/cover.css
+++ b/public/stylesheets/cover.css
@@ -172,8 +172,13 @@ body {
 }
 
 .image-container {
-    width: 300px;
-    height: 300px;
+    width: 30px;
+    height: 30px;
+}
+
+.image-container img {
+    width: 30px;
+    height: 30px;
 }
 
 .image-container img {
