--- a/public/javascripts/angular/views/base64.html
+++ b/public/javascripts/angular/views/base64.html
@@ -3,7 +3,7 @@
   <table>
     <tr  ng-repeat="curFile in storedFiles">
   	  <td style="font:12px;">  {{ curFile.name}}  </td>
-      <td class="image-container"> <img ng-src="{{curFile.image}}" /> </td>
+      <td class="image-container" ng-if="curFile.type.indexOf('image') !== -1" > <img ng-src="{{curFile.image}}" /> </td>
       <td> <div style="width:400px; height:30px; overflow:auto;"> {{curFile.base64}} </div></td>
     </tr>
   </table>
