handle more file types video, audio, pdf

--- a/public/javascripts/angular/views/upload.html
+++ b/public/javascripts/angular/views/upload.html
@@ -1,6 +1,6 @@
 <div ng-controller="UploadCtrl">
-  <div  file-dropzone="[image/png, image/jpeg, image/gif, application/pdf]" 
-  		 uploaded-files="storedFiles" max-file-size="13" dropzone-hover-class="toggleEnter"
+  <div  file-dropzone="[image/png, image/jpeg, image/gif, application/pdf, audio/mp3, video/mp4]" 
+  		 uploaded-files="storedFiles" max-file-size="100" dropzone-hover-class="toggleEnter"
   		class="dropzone">
   		<span>Drop Image Here</span> 
    </div>
